messy bugfixes: hide image on smaller screens + update required on schema + conditional render on single recipe pages;

--- a/components/SingleRecipeCard/SingleRecipe.module.scss
+++ b/components/SingleRecipeCard/SingleRecipe.module.scss
@@ -145,6 +145,10 @@
             max-height: 55rem;
             min-width: 55rem;
             max-width: 55rem;
+
+            @media only screen and (max-width: 900px) {
+                   display: none;
+            }
         }
 
         &-info {
